[gd_scene load_steps=4 format=3 uid="uid://dwk6lee4b333n"]

[ext_resource type="FontFile" uid="uid://b5bptjjfvw3i2" path="res://assets/ui/dialogue/tiny5.ttf" id="1_vmlr1"]
[ext_resource type="Script" uid="uid://3hmo0sf2kjo6" path="res://scenes/results/results_label.gd" id="2_iaiks"]
[ext_resource type="AudioStream" uid="uid://c85qdupi0gda" path="res://assets/audio/gold.wav" id="3_iaiks"]

[node name="Results" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 240.0
offset_bottom = 135.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 73.0
offset_top = 23.0
offset_right = 164.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("1_vmlr1")
theme_override_font_sizes/font_size = 8
text = "The day comes to a close..."
script = ExtResource("2_iaiks")

[node name="Label2" type="Label" parent="."]
offset_left = 75.0
offset_top = 47.0
offset_right = 166.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("1_vmlr1")
theme_override_font_sizes/font_size = 8

[node name="Label3" type="Label" parent="."]
offset_left = 75.0
offset_top = 60.0
offset_right = 166.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("1_vmlr1")
theme_override_font_sizes/font_size = 8

[node name="Label5" type="Label" parent="."]
offset_left = 75.0
offset_top = 72.0
offset_right = 166.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("1_vmlr1")
theme_override_font_sizes/font_size = 8

[node name="Label4" type="Label" parent="."]
offset_left = 71.0
offset_top = 101.0
offset_right = 162.0
offset_bottom = 111.0
theme_override_fonts/font = ExtResource("1_vmlr1")
theme_override_font_sizes/font_size = 8

[node name="SfxGold" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_iaiks")
